# fastapi-template

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  pyproject.toml
app/: __init__.py  gunicorn_conf.py  main.py
app/configuration/: __init__.py  config.ini  getConfig.py
app/configuration/configparser/: wrapper.py
app/dal/: __init__.py  connect.py
app/helper/anonymize/: Anonymize.py  CallbackHelper.py  __init__.py
app/helper/log/: __init__.py  log.py  logger.py
app/helper/pattern/: singleton.py
app/model/: BenchmarkModel.py
app/routers/: __init__.py  benchmark.py  config.py
helm/: kons_values.yaml  prod_values.yaml  test_values.yaml
tests/: conftest.py
tests/test_routers/: test_routers.py
