[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = "A fastapi template project "
authors = ["Florian Salfenmoser <florian.salfenmoser.dev@outlook.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "1.5.2"
gunicorn = "^20.1.0"
pymongo = "^4.0.1"
nested-lookup = "^0.2.25"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
dateparser = "^1.1.4"
schwifty = "^2022.9.0"
email-validator = "^1.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
httpx = "^0.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
